<resources>
    <string name="app_name">Ohio DevFest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="usd">USD</string>
    <string name="intro">Ohio DevFest 2016 is a <b>100% community organized developer conference</b> with industry experts presenting on exciting topics including <b>mobile, web, cloud, virtual reality, machine learning, and more!</b> Ohio DevFest 2016 is scheduled for <b>November 19th, 2016</b> at the <b>University of Cincinnati</b>.</string>
    <string name="code_of_conduct_1"><b>This “Don’t be a jerk” policy is a shortened, more casual version of the longer Code of Conduct policy. <a href="https://meta.wikimedia.org/wiki/Don%27t_be_a_jerk">Read full version.</a></b></string>
    <string name="code_of_conduct_2">The GDG communities organizing this event are open, respectful, and inclusive communities. That means jerky behavior isn’t allowed at GDG meetings or events. Because we know that it’s not obvious to everyone, here’s a reminder of the types of things we don’t allow: jokes or offensive comments about sex/sexuality/race/religion/nationality/age/disability/body size, showing porn in public, touching people uninvited, or continuing to interact with someone after they’ve asked you to stop. Continuous jerky behavior may result in getting expelled from the meeting, event, or GDG Chapter(s).</string>
    <string name="code_of_conduct_3">If someone is bothering you, please tell an organizer immediately and they will take care of it. We want to maintain GDG DevFest’s awesomeness.</string>
    <string name="code_of_conduct_4">Be excellent to each other.</string>
    <string name="featured_speakers">FEATURED SPEAKERS</string>
    <string name="view_all_speakers">VIEW ALL SPEAKERS</string>
    <string name="tickets">TICKETS</string>
    <string name="tickets_foot">Tickets grant access to all conference sessions, coffee breaks, and lunch. Accommodation is NOT included in the ticket price.</string>
    <string name="buy_your_ticket">BUY YOUR TICKET</string>
    <string name="attendees_value">100</string>
    <string name="attendees">Attendees</string>
    <string name="day">Day</string>
    <string name="sessions">Sessions</string>
    <string name="parallel_tracks">Parallel tracks</string>
    <string name="day_value">1</string>
    <string name="sessions_value">12</string>
    <string name="tracks_value">3</string>
    <string name="offer_end_date">Ends on Sept 16, 2016</string>
    <string name="professional_early_bird">Professional Early Bird</string>
    <string name="professional_early_price">50</string>
    <string name="student_early_bird">Student Early Bird</string>
    <string name="early_student_price">25</string>
    <string name="professional">Professional</string>
    <string name="professional_price">65</string>
    <string name="student">Student</string>
    <string name="student_price">35</string>
    <string name="read_more">Read more</string>
    <string name="transition_name_photo">photo</string>
    <string name="event_sponsorships">Ohio DevFest 2016​ welcomes businesses that are looking to increase their presence in the Ohio regional tech communities by reaching local developers and technology focused individuals through event sponsorships.</string>
    <string name="partners">Partners</string>
    <string name="venue_sponsor">Venue Sponsor</string>
    <string name="uc_url">https://www.uc.edu/</string>
    <string name="uc_it_url">http://cech.uc.edu/it.html</string>
    <string name="gold_sponsor">Gold Sponsor</string>
    <string name="kroger_url">https://www.kroger.com/LiveKT/</string>
    <string name="bronze_sponsors">Bronze Sponsors</string>
    <string name="cardinal_url">http://www.cardinalsolutions.com/</string>
    <string name="dotloop_url">https://www.dotloop.com/</string>
    <string name="lcs_url">https://www.lcs.com/</string>
    <string name="krush_url">http://www.krush.com/</string>
    <string name="road_tripper_url">https://roadtrippers.com/</string>
    <string name="callibrity_url">http://www.callibrity.com/</string>
    <string name="meddata_url">http://www.meddata.com/</string>
    <string name="google_url">https://www.google.com/</string>
    <string name="event_sponsor">Event Sponsor</string>
    <string name="organizers">Organizers</string>
    <string name="gdg_cin_url">https://www.meetup.com/cincy-android/</string>
    <string name="gdg_col_url">https://www.meetup.com/GDG-Columbus/</string>
    <string name="title_conduct">Code of Conduct</string>
    <string name="jerk_url">https://meta.wikimedia.org/wiki/Don%27t_be_a_jerk</string>
    <string name="eventbrite_url">https://www.eventbrite.com/e/ohio-devfest-tickets-25964520580</string>
    <string name="attend">Attend</string>
    <string name="attending">Attending</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="speakers">Speakers</string>
    <string name="okButtonText">OK</string>
    <string name="about">About</string>
    <string name="limerobot_url">http://limerobotsoftware.com/</string>
</resources>
