<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dev_fest_logo"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/ic_menu_speakers"
            android:title="@string/speakers" />
        <item
            android:id="@+id/nav_partners"
            android:icon="@drawable/ic_menu_partners"
            android:title="@string/partners" />
        <item
            android:id="@+id/nav_conduct"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/title_conduct" />
    </group>

    <item android:id="@+id/nav_about"
        android:icon="@drawable/ic_limerobot_only_logo"
        android:title="@string/about" />

</menu>
