<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/partners"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/venue_sponsor"
        android:textSize="18sp" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:flexWrap="wrap"
        app:justifyContent="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/university_of_cincinnati"
            android:onClick="openWebpage"
            android:tag="@string/uc_url"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/school_of_information_technology"
            android:onClick="openWebpage"
            android:tag="@string/uc_it_url"/>

    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/gold_sponsor"
        android:textSize="18sp" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:flexWrap="wrap"
        app:justifyContent="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/kroger"
            android:onClick="openWebpage"
            android:tag="@string/kroger_url"/>

    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bronze_sponsors"
        android:textSize="18sp" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:flexWrap="wrap"
        app:justifyContent="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/cardinal_solutions_group"
            android:onClick="openWebpage"
            android:tag="@string/cardinal_url"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/dotloop"
            android:onClick="openWebpage"
            android:tag="@string/dotloop_url"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/lcs"
            android:onClick="openWebpage"
            android:tag="@string/lcs_url"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/krush"
            android:onClick="openWebpage"
            android:tag="@string/krush_url"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/roadtrippers"
            android:onClick="openWebpage"
            android:tag="@string/road_tripper_url"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/callibrity"
            android:onClick="openWebpage"
            android:tag="@string/callibrity_url"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/meddata"
            android:onClick="openWebpage"
            android:tag="@string/meddata_url"/>

    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/event_sponsor"
        android:textSize="18sp" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:flexWrap="wrap"
        app:justifyContent="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/google_logo"
            android:onClick="openWebpage"
            android:tag="@string/google_url"/>

    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/organizers"
        android:textSize="18sp" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:flexWrap="wrap"
        app:justifyContent="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/gdg_cincinnati"
            android:onClick="openWebpage"
            android:tag="@string/gdg_cin_url"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:padding="10dp"
            android:src="@drawable/gdg_columbus"
            android:onClick="openWebpage"
            android:tag="@string/gdg_col_url"/>

    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/event_sponsorships"
        android:textSize="14sp" />

</LinearLayout>