<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:showIn="@layout/fragment_home">

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <GridView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/attendees_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attendees_value"
                android:textAlignment="center"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/attendees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attendees"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/day_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_value"
                android:textAlignment="center"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sessions_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sessions_value"
                android:textAlignment="center"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/sessions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sessions"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tracks_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tracks_value"
                android:textAlignment="center"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/parallel_tracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parallel_tracks"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>
    </GridView>
</LinearLayout>