<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:showIn="@layout/fragment_home">

    <TextView
        android:id="@+id/tickets_head"
        android:text="@string/tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="32sp" />

    <GridView
        android:id="@+id/ticket_prices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/early_professional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_height="64dp"
                android:layout_width="144dp"
                android:text="@string/professional_early_bird"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="24sp"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/professional_early_price"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="60sp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="18sp"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer_end_date"
                android:textColor="@color/colorPrimaryLight"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/early_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_height="64dp"
                android:layout_width="144dp"
                android:text="@string/student_early_bird"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="24sp"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/early_student_price"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="60sp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="18sp"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer_end_date"
                android:textColor="@color/colorPrimaryLight"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/professional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_height="64dp"
                android:layout_width="144dp"
                android:text="@string/professional"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/professional_price"
                    android:textColor="@android:color/white"
                    android:textSize="60sp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_height="64dp"
                android:layout_width="144dp"
                android:text="@string/student"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_price"
                    android:textColor="@android:color/white"
                    android:textSize="60sp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>
    </GridView>
    <TextView
        android:id="@+id/tickets_foot"
        android:text="@string/tickets_foot"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp" />
    <Button
        android:id="@+id/tickets_button"
        android:text="@string/buy_your_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>